# MCH

./: .gitignore  README.md
back/: README.md  README.rst  pyproject.toml
back/config/config/: settings.py  urls.py  yasg.py
back/config/partner/: admin.py  apps.py  models.py  serializers.py  service.py  urls.py  views.py
back/config/partner/migrations/: 0001_initial.py  0002_initial.py  0003_alter_historyresponse_options_remove_bonus_vacancy_and_more.py  0003_alter_vacancy_description_alter_vacancy_location_and_more.py  0004_alter_bonus_name_alter_vacancy_bonus_and_more.py  0004_alter_vacancy_allowable_age.py
back/config/shop/: models.py  serializers.py  service.py  urls.py  views.py
back/config/shop/migrations/: 0001_initial.py  0002_rename_section_category.py
back/config/users/: models.py  serializer.py
back/config/users/migrations/: 0001_initial.py  0002_initial.py
back/config/volunteer/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
back/config/volunteer/migrations/: 0001_initial.py  0002_wallet.py  0003_remove_wallet_id_alter_wallet_user.py  0004_alter_wallet_user.py
client/src/components/navbar/: Navbar.jsx  navbar.css
front/: package-lock.json
front/public/: index.html
front/src/: App.css  App.js  index.js
front/src/Components/: Advertisement.js  Btn.js  Footer.js  MainPage.js  Nav.js  OneVac.js  Register.js  Vacant.js  VacasList.js
front/src/Components/assets/: script.js  style.css
front/src/style/: OneVac.css  Vacant.css
